src/grammar/python/PythonTracebackParser.ts
// Generated from src/grammar/python/PythonTracebackParser.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import PythonTracebackParserListener from "./PythonTracebackParserListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class PythonTracebackParser extends Parser {
	public static readonly TRACEBACK = 1;
	public static readonly DURING_HANDLING = 2;
	public static readonly DIRECT_CAUSE = 3;
	public static readonly FRAME_LINE = 4;
	public static readonly EXCEPTION_LINE = 5;
	public static readonly TEXT = 6;
	public static readonly NEWLINE = 7;
	public static readonly WS = 8;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_log = 0;
	public static readonly RULE_entry = 1;
	public static readonly RULE_outputLine = 2;
	public static readonly RULE_tracebackChain = 3;
	public static readonly RULE_transition = 4;
	public static readonly RULE_tracebackBlock = 5;
	public static readonly RULE_tracebackHeader = 6;
	public static readonly RULE_frame = 7;
	public static readonly RULE_sourceLine = 8;
	public static readonly RULE_exceptionLine = 9;
	public static readonly literalNames: (string | null)[] = [  ];
	public static readonly symbolicNames: (string | null)[] = [ null, "TRACEBACK", 
                                                             "DURING_HANDLING", 
                                                             "DIRECT_CAUSE", 
                                                             "FRAME_LINE", 
                                                             "EXCEPTION_LINE", 
                                                             "TEXT", "NEWLINE", 
                                                             "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"log", "entry", "outputLine", "tracebackChain", "transition", "tracebackBlock", 
		"tracebackHeader", "frame", "sourceLine", "exceptionLine",
	];
	public get grammarFileName(): string { return "PythonTracebackParser.g4"; }
	public get literalNames(): (string | null)[] { return PythonTracebackParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return PythonTracebackParser.symbolicNames; }
	public get ruleNames(): string[] { return PythonTracebackParser.ruleNames; }
	public get serializedATN(): number[] { return PythonTracebackParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, PythonTracebackParser._ATN, PythonTracebackParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public log(): LogContext {
		let localctx: LogContext = new LogContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, PythonTracebackParser.RULE_log);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 23;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===1 || _la===6) {
				{
				{
				this.state = 20;
				this.entry();
				}
				}
				this.state = 25;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 26;
			this.match(PythonTracebackParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public entry(): EntryContext {
		let localctx: EntryContext = new EntryContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, PythonTracebackParser.RULE_entry);
		try {
			this.state = 30;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 28;
				this.tracebackChain();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 29;
				this.outputLine();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public outputLine(): OutputLineContext {
		let localctx: OutputLineContext = new OutputLineContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, PythonTracebackParser.RULE_outputLine);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 32;
			this.match(PythonTracebackParser.TEXT);
			this.state = 33;
			this.match(PythonTracebackParser.NEWLINE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public tracebackChain(): TracebackChainContext {
		let localctx: TracebackChainContext = new TracebackChainContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, PythonTracebackParser.RULE_tracebackChain);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 35;
			this.tracebackBlock();
			this.state = 41;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===2 || _la===3) {
				{
				{
				this.state = 36;
				this.transition();
				this.state = 37;
				this.tracebackBlock();
				}
				}
				this.state = 43;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public transition(): TransitionContext {
		let localctx: TransitionContext = new TransitionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, PythonTracebackParser.RULE_transition);
		let _la: number;
		try {
			this.state = 56;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 2:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 44;
				this.match(PythonTracebackParser.DURING_HANDLING);
				this.state = 46;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 45;
					this.match(PythonTracebackParser.NEWLINE);
					}
					}
					this.state = 48;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la===7);
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 50;
				this.match(PythonTracebackParser.DIRECT_CAUSE);
				this.state = 52;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 51;
					this.match(PythonTracebackParser.NEWLINE);
					}
					}
					this.state = 54;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la===7);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public tracebackBlock(): TracebackBlockContext {
		let localctx: TracebackBlockContext = new TracebackBlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, PythonTracebackParser.RULE_tracebackBlock);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 58;
			this.tracebackHeader();
			this.state = 62;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===4) {
				{
				{
				this.state = 59;
				this.frame();
				}
				}
				this.state = 64;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 65;
			this.exceptionLine();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public tracebackHeader(): TracebackHeaderContext {
		let localctx: TracebackHeaderContext = new TracebackHeaderContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, PythonTracebackParser.RULE_tracebackHeader);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 67;
			this.match(PythonTracebackParser.TRACEBACK);
			this.state = 69;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 68;
				this.match(PythonTracebackParser.NEWLINE);
				}
				}
				this.state = 71;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===7);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public frame(): FrameContext {
		let localctx: FrameContext = new FrameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, PythonTracebackParser.RULE_frame);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 73;
			this.match(PythonTracebackParser.FRAME_LINE);
			this.state = 74;
			this.match(PythonTracebackParser.NEWLINE);
			this.state = 78;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===6) {
				{
				{
				this.state = 75;
				this.sourceLine();
				}
				}
				this.state = 80;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public sourceLine(): SourceLineContext {
		let localctx: SourceLineContext = new SourceLineContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, PythonTracebackParser.RULE_sourceLine);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 81;
			this.match(PythonTracebackParser.TEXT);
			this.state = 82;
			this.match(PythonTracebackParser.NEWLINE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public exceptionLine(): ExceptionLineContext {
		let localctx: ExceptionLineContext = new ExceptionLineContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, PythonTracebackParser.RULE_exceptionLine);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 84;
			this.match(PythonTracebackParser.EXCEPTION_LINE);
			this.state = 88;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===7) {
				{
				{
				this.state = 85;
				this.match(PythonTracebackParser.NEWLINE);
				}
				}
				this.state = 90;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!PythonTracebackParser.__ATN) {
			PythonTracebackParser.__ATN = new ATNDeserializer().deserialize(PythonTracebackParser._serializedATN);
		}

		return PythonTracebackParser.__ATN;
	}


	static DecisionsToDFA = PythonTracebackParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class LogContext extends ParserRuleContext {
	constructor(parser?: PythonTracebackParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public EOF(): TerminalNode {
		return this.getToken(PythonTracebackParser.EOF, 0);
	}
	public entry_list(): EntryContext[] {
		return this.getTypedRuleContexts(EntryContext) as EntryContext[];
	}
	public entry(i: number): EntryContext {
		return this.getTypedRuleContext(EntryContext, i) as EntryContext;
	}
    public get ruleIndex(): number {
    	return PythonTracebackParser.RULE_log;
	}
	public enterRule(listener: PythonTracebackParserListener): void {
	    if(listener.enterLog) {
	 		listener.enterLog(this);
		}
	}
	public exitRule(listener: PythonTracebackParserListener): void {
	    if(listener.exitLog) {
	 		listener.exitLog(this);
		}
	}
}


export class EntryContext extends ParserRuleContext {
	constructor(parser?: PythonTracebackParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public tracebackChain(): TracebackChainContext {
		return this.getTypedRuleContext(TracebackChainContext, 0) as TracebackChainContext;
	}
	public outputLine(): OutputLineContext {
		return this.getTypedRuleContext(OutputLineContext, 0) as OutputLineContext;
	}
    public get ruleIndex(): number {
    	return PythonTracebackParser.RULE_entry;
	}
	public enterRule(listener: PythonTracebackParserListener): void {
	    if(listener.enterEntry) {
	 		listener.enterEntry(this);
		}
	}
	public exitRule(listener: PythonTracebackParserListener): void {
	    if(listener.exitEntry) {
	 		listener.exitEntry(this);
		}
	}
}


export class OutputLineContext extends ParserRuleContext {
	constructor(parser?: PythonTracebackParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public TEXT(): TerminalNode {
		return this.getToken(PythonTracebackParser.TEXT, 0);
	}
	public NEWLINE(): TerminalNode {
		return this.getToken(PythonTracebackParser.NEWLINE, 0);
	}
    public get ruleIndex(): number {
    	return PythonTracebackParser.RULE_outputLine;
	}
	public enterRule(listener: PythonTracebackParserListener): void {
	    if(listener.enterOutputLine) {
	 		listener.enterOutputLine(this);
		}
	}
	public exitRule(listener: PythonTracebackParserListener): void {
	    if(listener.exitOutputLine) {
	 		listener.exitOutputLine(this);
		}
	}
}


export class TracebackChainContext extends ParserRuleContext {
	constructor(parser?: PythonTracebackParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public tracebackBlock_list(): TracebackBlockContext[] {
		return this.getTypedRuleContexts(TracebackBlockContext) as TracebackBlockContext[];
	}
	public tracebackBlock(i: number): TracebackBlockContext {
		return this.getTypedRuleContext(TracebackBlockContext, i) as TracebackBlockContext;
	}
	public transition_list(): TransitionContext[] {
		return this.getTypedRuleContexts(TransitionContext) as TransitionContext[];
	}
	public transition(i: number): TransitionContext {
		return this.getTypedRuleContext(TransitionContext, i) as TransitionContext;
	}
    public get ruleIndex(): number {
    	return PythonTracebackParser.RULE_tracebackChain;
	}
	public enterRule(listener: PythonTracebackParserListener): void {
	    if(listener.enterTracebackChain) {
	 		listener.enterTracebackChain(this);
		}
	}
	public exitRule(listener: PythonTracebackParserListener): void {
	    if(listener.exitTracebackChain) {
	 		listener.exitTracebackChain(this);
		}
	}
}


export class TransitionContext extends ParserRuleContext {
	constructor(parser?: PythonTracebackParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public DURING_HANDLING(): TerminalNode {
		return this.getToken(PythonTracebackParser.DURING_HANDLING, 0);
	}
	public NEWLINE_list(): TerminalNode[] {
	    	return this.getTokens(PythonTracebackParser.NEWLINE);
	}
	public NEWLINE(i: number): TerminalNode {
		return this.getToken(PythonTracebackParser.NEWLINE, i);
	}
	public DIRECT_CAUSE(): TerminalNode {
		return this.getToken(PythonTracebackParser.DIRECT_CAUSE, 0);
	}
    public get ruleIndex(): number {
    	return PythonTracebackParser.RULE_transition;
	}
	public enterRule(listener: PythonTracebackParserListener): void {
	    if(listener.enterTransition) {
	 		listener.enterTransition(this);
		}
	}
	public exitRule(listener: PythonTracebackParserListener): void {
	    if(listener.exitTransition) {
	 		listener.exitTransition(this);
		}
	}
}


export class TracebackBlockContext extends ParserRuleContext {
	constructor(parser?: PythonTracebackParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public tracebackHeader(): TracebackHeaderContext {
		return this.getTypedRuleContext(TracebackHeaderContext, 0) as TracebackHeaderContext;
	}
	public exceptionLine(): ExceptionLineContext {
		return this.getTypedRuleContext(ExceptionLineContext, 0) as ExceptionLineContext;
	}
	public frame_list(): FrameContext[] {
		return this.getTypedRuleContexts(FrameContext) as FrameContext[];
	}
	public frame(i: number): FrameContext {
		return this.getTypedRuleContext(FrameContext, i) as FrameContext;
	}
    public get ruleIndex(): number {
    	return PythonTracebackParser.RULE_tracebackBlock;
	}
	public enterRule(listener: PythonTracebackParserListener): void {
	    if(listener.enterTracebackBlock) {
	 		listener.enterTracebackBlock(this);
		}
	}
	public exitRule(listener: PythonTracebackParserListener): void {
	    if(listener.exitTracebackBlock) {
	 		listener.exitTracebackBlock(this);
		}
	}
}


export class TracebackHeaderContext extends ParserRuleContext {
	constructor(parser?: PythonTracebackParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public TRACEBACK(): TerminalNode {
		return this.getToken(PythonTracebackParser.TRACEBACK, 0);
	}
	public NEWLINE_list(): TerminalNode[] {
	    	return this.getTokens(PythonTracebackParser.NEWLINE);
	}
	public NEWLINE(i: number): TerminalNode {
		return this.getToken(PythonTracebackParser.NEWLINE, i);
	}
    public get ruleIndex(): number {
    	return PythonTracebackParser.RULE_tracebackHeader;
	}
	public enterRule(listener: PythonTracebackParserListener): void {
	    if(listener.enterTracebackHeader) {
	 		listener.enterTracebackHeader(this);
		}
	}
	public exitRule(listener: PythonTracebackParserListener): void {
	    if(listener.exitTracebackHeader) {
	 		listener.exitTracebackHeader(this);
		}
	}
}


export class FrameContext extends ParserRuleContext {
	constructor(parser?: PythonTracebackParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public FRAME_LINE(): TerminalNode {
		return this.getToken(PythonTracebackParser.FRAME_LINE, 0);
	}
	public NEWLINE(): TerminalNode {
		return this.getToken(PythonTracebackParser.NEWLINE, 0);
	}
	public sourceLine_list(): SourceLineContext[] {
		return this.getTypedRuleContexts(SourceLineContext) as SourceLineContext[];
	}
	public sourceLine(i: number): SourceLineContext {
		return this.getTypedRuleContext(SourceLineContext, i) as SourceLineContext;
	}
    public get ruleIndex(): number {
    	return PythonTracebackParser.RULE_frame;
	}
	public enterRule(listener: PythonTracebackParserListener): void {
	    if(listener.enterFrame) {
	 		listener.enterFrame(this);
		}
	}
	public exitRule(listener: PythonTracebackParserListener): void {
	    if(listener.exitFrame) {
	 		listener.exitFrame(this);
		}
	}
}


export class SourceLineContext extends ParserRuleContext {
	constructor(parser?: PythonTracebackParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public TEXT(): TerminalNode {
		return this.getToken(PythonTracebackParser.TEXT, 0);
	}
	public NEWLINE(): TerminalNode {
		return this.getToken(PythonTracebackParser.NEWLINE, 0);
	}
    public get ruleIndex(): number {
    	return PythonTracebackParser.RULE_sourceLine;
	}
	public enterRule(listener: PythonTracebackParserListener): void {
	    if(listener.enterSourceLine) {
	 		listener.enterSourceLine(this);
		}
	}
	public exitRule(listener: PythonTracebackParserListener): void {
	    if(listener.exitSourceLine) {
	 		listener.exitSourceLine(this);
		}
	}
}


export class ExceptionLineContext extends ParserRuleContext {
	constructor(parser?: PythonTracebackParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public EXCEPTION_LINE(): TerminalNode {
		return this.getToken(PythonTracebackParser.EXCEPTION_LINE, 0);
	}
	public NEWLINE_list(): TerminalNode[] {
	    	return this.getTokens(PythonTracebackParser.NEWLINE);
	}
	public NEWLINE(i: number): TerminalNode {
		return this.getToken(PythonTracebackParser.NEWLINE, i);
	}
    public get ruleIndex(): number {
    	return PythonTracebackParser.RULE_exceptionLine;
	}
	public enterRule(listener: PythonTracebackParserListener): void {
	    if(listener.enterExceptionLine) {
	 		listener.enterExceptionLine(this);
		}
	}
	public exitRule(listener: PythonTracebackParserListener): void {
	    if(listener.exitExceptionLine) {
	 		listener.exitExceptionLine(this);
		}
	}
}
